--- a/rancher-multimaster-base-infra/rke_cluster.tmpl
+++ b/rancher-multimaster-base-infra/rke_cluster.tmpl
@@ -10,6 +10,13 @@ nodes:
         - etcd
 %{ endfor ~}
 
+authentication:
+    strategy: x509
+    sans:
+%{ for index, group in k8s-master-ips ~}
+      - "${k8s-master-ips[index]}"
+%{ endfor ~}
+
 %{ for index, group in k8s-worker-nodes ~}
     - address: ${k8s-worker-nodes[index]}
       user: ec2-user
